# Demo-based-on-eigen

./: README.md
Triangulate/: CMakeLists.txt  triangulate.cpp
eigen_Feature_vectors/: CMakeLists.txt  feature_vector.cpp
eigen_QR_test/: CMakeLists.txt  QR.cpp
eigen_map/: CMakeLists.txt  test_eigen_map.cpp
eigen_svd_test/: CMakeLists.txt  svd.cpp
pose_generate/: CMakeLists.txt  pose_generate.cpp
rotation/: CMakeLists.txt  activeaxis.cpp  fixedaxis.cpp
solve_liner_equation/: CMakeLists.txt  SLE.cpp
the use of cmake/src/: hello.cpp
第二讲find使用/: CMakeLists.txt
第二讲find使用/cmake/: FindHELLO.cmake
第二讲find使用/include/: hello.h
第二讲find使用/main/: CMakeLists.txt  main.cpp
